force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>Identifies a flight between to different cities.</description>
    <label>Flight</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>