force-app/main/default/objects/Flight__c/fields/FLI_LOO_ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>FLI_LOO_ArrivalAirport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Arrival airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival airport)</relationshipLabel>
    <relationshipName>ArrivalFlights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>