force-app/main/default/objects/Flight__c/fields/FLI_LOO_DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>FLI_LOO_DepartureAirport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>DepartureFlights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>