force-app/main/default/objects/Flight__c/fields/FLI_NUM_FlightDistance__c.field-meta.xml
<CustomField>
    <fullName>FLI_NUM_FlightDistance__c</fullName>
    <description>Flight distance between the two airports in kilometers.</description>
    <label>Flight distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>