force-app/main/default/objects/Flight__c/listViews/All_airports.listView-meta.xml
<ListView>
    <fullName>All_airports</fullName>
    <columns>NAME</columns>
    <columns>FLI_LOO_DepartureAirport__c</columns>
    <columns>FLI_LOO_ArrivalAirport__c</columns>
    <columns>FLI_NUM_FlightDistance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All airports</label>
</ListView>