force-app/main/default/objects/Flight__c/listViews/All_flights.listView-meta.xml
<ListView>
    <fullName>All_flights</fullName>
    <columns>NAME</columns>
    <columns>FLI_LOO_DepartureAirport__c</columns>
    <columns>FLI_LOO_ArrivalAirport__c</columns>
    <columns>FLI_NUM_FlightDistance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All flights</label>
</ListView>